# pyri_state

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
derive/: Cargo.toml
derive/src/: app.rs  lib.rs  util.rs
examples/: bevy_state.rs  bevy_state_wrapper.rs  computed_and_substates.rs  configuration.rs  custom_next_state.rs  custom_storage.rs  customization.rs  dependent_states.rs  direct_mutation.rs  disable_enable.rs  disable_enable_toggle.rs  ecosystem_compatibility.rs  flexible_scheduling.rs  modular_configuration.rs  next_state.rs  next_state_sequence.rs  next_state_stack.rs  partial_mutation.rs  pattern_matching.rs  refresh.rs  sequence_storage.rs  split_state.rs  stack_storage.rs  state_sequence.rs  state_stack.rs  state_storage.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: access.rs  app.rs  buffer.rs  computed.rs  conditions.rs  config.rs  debug.rs  extra.rs  lib.rs  next.rs  next_state.rs  pattern.rs  schedule.rs  setup.rs  state.rs  storage.rs  systems.rs  util.rs
src/debug/: log_flush.rs  mod.rs
src/extra/: app.rs  bevy_state.rs  debug.rs  entity_scope.rs  mod.rs  react.rs  sequence.rs  split.rs  stack.rs
src/next_state/: buffer.rs  mod.rs  sequence.rs  stack.rs
src/schedule/: apply_flush.rs  detect_change.rs  flush_event.rs  flush_message.rs  mod.rs  resolve_state.rs
src/storage/: sequence.rs  slot.rs  stack.rs
