[package]
name = "pyri_state"
version = "0.2.0"
edition = "2021"
description = "A flexible alternative to `bevy_state`"
repository = "https://github.com/benfrankel/pyri_state"
license = "MIT OR Apache-2.0"
keywords = ["ecs", "game", "bevy"]
categories = ["game-engines", "data-structures"]

[features]
# All features are enabled by default.
default = [
    "bevy_app",
    "bevy_reflect",
    "bevy_state",
    "debug",
    "sequence",
    "split",
    "stack",
]
# Enable state configuration tools for `App`.
bevy_app = ["dep:bevy_app", "pyri_state_derive/bevy_app"]
# Derive `Reflect` for the types in this crate.
bevy_reflect = ["dep:bevy_reflect", "bevy_ecs/bevy_reflect"]
# Enable `BevyState` as an ecosystem compatibility tool.
bevy_state = ["dep:bevy_state", "pyri_state_derive/bevy_state"]
# Enable state debugging tools (e.g. on-flush logging).
debug = ["dep:bevy_core", "dep:bevy_log", "pyri_state_derive/debug"]
# Enable the `StateSequence` storage type.
sequence = []
# Enable split states as a code organization tool.
split = []
# Enable the `StateStack` storage type.
stack = []

[dependencies]
bevy_app = { version = "0.14.0-rc.2", default-features = false, optional = true }
bevy_core = { version = "0.14.0-rc.2", optional = true }
bevy_ecs = { version = "0.14.0-rc.2", default-features = false }
bevy_log = { version = "0.14.0-rc.2", optional = true }
bevy_reflect = { version = "0.14.0-rc.2", optional = true }
bevy_state = { version = "0.14.0-rc.2", optional = true }
pyri_state_derive = { version = "0.2", path = "derive" }

[dev-dependencies]
bevy = { version = "0.14.0-rc.2", default-features = false, features = [
    "bevy_winit",
    "x11",
    "multi_threaded",
] }
# TODO: Ecosystem crates need to be updated for bevy 0.14 as well.
bevy_asset_loader = "0.20"
iyes_progress = "0.11"
