[package]
name = "pyri_state"
version = "0.2.0-rc.0"
edition = "2021"
description = "A flexible `bevy_state` alternative"
repository = "https://github.com/benfrankel/pyri_state"
license = "MIT OR Apache-2.0"
keywords = ["ecs", "game", "bevy"]
categories = ["game-engines", "data-structures"]

[features]
# All features are enabled by default.
default = [
    "bevy_app",
    "bevy_reflect",
    "bevy_state",
    "debug",
    "entity_scope",
    "sequence",
    "split",
    "stack",
]
# Enable state configuration tools for `App`.
bevy_app = ["dep:bevy_app", "pyri_state_derive/bevy_app"]
# Derive `Reflect` for the types in this crate.
bevy_reflect = ["dep:bevy_reflect", "bevy_ecs/bevy_reflect"]
# Enable the `BevyState` wrapper type for ecosystem compatibility.
bevy_state = ["dep:bevy_state", "pyri_state_derive/bevy_state"]
# Enable state debugging tools (e.g. on-flush logging).
debug = ["dep:bevy_core", "dep:bevy_log", "pyri_state_derive/debug"]
# Enable the `StateScope` component.
entity_scope = ["dep:bevy_hierarchy", "pyri_state_derive/entity_scope"]
# Enable the `StateSequenceIndex` next state type.
sequence = []
# Enable the `SplitState` code organization tool.
split = []
# Enable the `StateStack` next state type.
stack = []

[dependencies]
bevy_app = { version = "0.14.0-rc.3", default-features = false, optional = true }
bevy_core = { version = "0.14.0-rc.3", optional = true }
bevy_ecs = { version = "0.14.0-rc.3", default-features = false }
bevy_hierarchy = { version = "0.14.0-rc.3", optional = true }
bevy_log = { version = "0.14.0-rc.3", optional = true }
bevy_reflect = { version = "0.14.0-rc.3", optional = true }
bevy_state = { version = "0.14.0-rc.3", optional = true }
pyri_state_derive = { version = "0.2.0-rc.0", path = "derive" }

[dev-dependencies]
bevy = { version = "0.14.0-rc.3", default-features = false, features = [
    "bevy_winit",
    "x11",
    "multi_threaded",
] }
# TODO: `bevy_asset_loader` is incompatible with `pyri_state`, unfortunately.
#       (see https://github.com/NiklasEi/bevy_asset_loader/issues/219)
#bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", branch = "bevy_main" }
iyes_progress = { git = "https://github.com/NiklasEi/iyes_progress", branch = "update_bevy_main_for_0_14_cycle" }
