[package]
name = "pyri_state_derive"
version = "0.4.0"
edition = "2024"
description = "Derive macros for `pyri_state`"
repository = "https://github.com/benfrankel/pyri_state"
license = "MIT OR Apache-2.0"
keywords = ["ecs", "game", "bevy"]
categories = ["game-engines", "data-structures"]

[features]
bevy_app = []
bevy_state = []
react = []
debug = []

[lib]
proc-macro = true

[dependencies]
bevy_macro_utils = "0.15"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", default-features = false, features = [
    "clone-impls",
    "derive",
    "parsing",
    "printing",
    "proc-macro",
] }
